<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:layout_marginTop="12dp"
    android:orientation="vertical"
    android:background="#ffffff">
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal">
      
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/year"
            android:textColor="#000000"
            android:textSize="20dip"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/month"
            android:textColor="#000000"
            android:textSize="20dip"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/day"
            android:textColor="#000000"
            android:textSize="20dip"/> 
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hour"
            android:textColor="#000000"
            android:textSize="20dip"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/minute"
            android:textColor="#000000"
            android:textSize="20dip"/>
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/second"
            android:visibility="gone"
            android:textColor="#000000"
            android:textSize="20dip"/>                 
    </LinearLayout>
    
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:background="#ffffff">
      
        <com.fpliu.newton.framework.ui.datatimepicker.WheelView 
            android:id="@+id/yearwheel"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"/>
        <com.fpliu.newton.framework.ui.datatimepicker.WheelView 
            android:id="@+id/monthwheel"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"/>
        <com.fpliu.newton.framework.ui.datatimepicker.WheelView 
            android:id="@+id/daywheel"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"/>
        <com.fpliu.newton.framework.ui.datatimepicker.WheelView 
             android:id="@+id/hourwheel"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"/> 
        <com.fpliu.newton.framework.ui.datatimepicker.WheelView  
            android:id="@+id/minutewheel"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"/> 
        <com.fpliu.newton.framework.ui.datatimepicker.WheelView  
            android:id="@+id/secondwheel"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:visibility="gone"
            android:layout_weight="1"/>              
    </LinearLayout>
</LinearLayout>