<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_marginTop="15dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/balance_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.82"
                android:text="@string/balance"
                android:textColor="@color/graydarktext"
                android:textSize="16sp" />

            <Button
                android:id="@+id/withdeaw_bt"
                android:layout_width="45dp"
                android:layout_height="35dip"
                android:layout_weight="0.10"
                android:background="@drawable/btn_bg_change"
                android:gravity="center"
                android:text="@string/apply_withdrawals"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@color/graydark" />

        <TextView
            android:id="@+id/income_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/accumulated_income"
            android:textColor="@color/graydarktext"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/withidraw_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/accumulated_withdrawal"
            android:textColor="@color/graydarktext"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/current_withidraw_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/reviewing_withdrawal"
            android:textColor="@color/graydarktext"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/rank_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/heroes_ranking"
            android:textColor="@color/graydarktext"
            android:textSize="16sp"
            android:visibility="gone" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:layout_marginTop="5dip"
            android:background="@color/graydark" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_indivivdual"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dip"
        android:orientation="vertical" >

        <include
            android:layout_width="match_parent"
            android:layout_height="39dp"
            layout="@layout/cell_content_array_button" >
        </include>

    	<com.fpliu.newton.business.account.HorizontalScrollInViewGroup
            android:id="@+id/inner_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</LinearLayout>